--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Nov 19 2020 02:46:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 25 2020 13:14:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fadfc3ded1d4d46912e835e" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/portfolio-7760df.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -19,9 +19,9 @@
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="container-4 w-container">
-      <a href="#top" class="brand w-nav-brand"></a>
+      <a href="#" class="brand w-nav-brand"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="#about" class="nav-link w-nav-link">About</a>
+        <a href="#" class="nav-link w-nav-link">About</a>
       </nav>
       <div class="w-nav-button">
         <div class="icon w-icon-nav-menu"></div>
@@ -29,44 +29,74 @@
       <div class="section-5"></div>
     </div>
   </div>
-  <div class="div-block-3"><img src="images/Screen-Shot-2020-11-13-at-12.04.04-PM.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-12.04.04-PM.png 1452w" alt="" class="image-3"></div>
-  <div id="top" class="section">
-    <p class="paragraph">Hi, Hello! Nice to meet you, I&#x27;m</p><img src="images/Erin048-2.jpeg" loading="lazy" width="894" sizes="(max-width: 479px) 81vw, 72vw" srcset="images/Erin048-2-p-500.jpeg 500w, images/Erin048-2-p-800.jpeg 800w, images/Erin048-2-p-1080.jpeg 1080w, images/Erin048-2-p-1600.jpeg 1600w, images/Erin048-2.jpeg 1707w" alt="" class="image">
-    <div class="columns w-row">
-      <div class="column w-col w-col-4"><img src="images/356034-200.png" loading="lazy" alt="" class="image-4">
-        <div class="heading-3">User Experience</div>
+  <div class="container-9 w-container">
+    <div class="div-block-3">
+      <p class="paragraph"> Hi, Hello! Nice to meet you, I&#x27;m</p>
+      <div class="landingspace"></div>
+      <div class="columns-10 w-row">
+        <div class="column-3 w-col w-col-4 w-col-small-4 w-col-tiny-4"><img src="images/356034-200.png" loading="lazy" alt="" class="image-42">
+          <div class="iconsub">User Experience</div>
+        </div>
+        <div class="column-3 w-col w-col-4 w-col-small-4 w-col-tiny-4"><img src="images/355092-200.png" loading="lazy" alt="" class="image-42">
+          <div class="iconsub">Strategy</div>
+        </div>
+        <div class="column-3 w-col w-col-4 w-col-small-4 w-col-tiny-4"><img src="images/374874-200.png" loading="lazy" alt="" class="image-42">
+          <div class="iconsub">Project Management</div>
+        </div>
       </div>
-      <div class="column w-col w-col-4"><img src="images/355092-200.png" loading="lazy" alt="" class="image-5">
-        <div class="heading-3">Strategy</div>
-      </div>
-      <div class="column w-col w-col-4"><img src="images/374874-200.png" loading="lazy" alt="" class="image-6">
-        <div class="heading-3">Project Management</div>
+    </div><img src="images/Erin048-2.jpeg" loading="lazy" width="870" sizes="(max-width: 991px) 90vw, 870px" srcset="images/Erin048-2-p-500.jpeg 500w, images/Erin048-2-p-800.jpeg 800w, images/Erin048-2-p-1080.jpeg 1080w, images/Erin048-2-p-1600.jpeg 1600w, images/Erin048-2.jpeg 1707w" alt="" class="image">
+  </div><img src="images/Screen-Shot-2020-11-13-at-12.04.04-PM.png" loading="lazy" sizes="(max-width: 479px) 72vw, (max-width: 4033px) 36vw, 1452px" srcset="images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-12.04.04-PM.png 1452w" alt="" class="image-3">
+  <div class="w-container">
+    <div class="w-row">
+      <div class="w-col w-col-6 w-col-stack"><img src="images/Screen-Shot-2020-11-24-at-11.31.51-AM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.31.51-AM.png 916w" alt="" class="image-49"></div>
+      <div class="column-4 w-clearfix w-col w-col-6 w-col-stack">
+        <div class="div-block-9">
+          <div class="text-block-5">education </div><img src="images/wordmarksquare-red-600x600.png" loading="lazy" alt="" class="image-45"><img src="images/1200px-HCII_logo.svg.png" loading="lazy" sizes="(max-width: 479px) 91.53125px, 183.0625px" srcset="images/1200px-HCII_logo.svg-p-500.png 500w, images/1200px-HCII_logo.svg-p-800.png 800w, images/1200px-HCII_logo.svg-p-1080.png 1080w, images/1200px-HCII_logo.svg.png 1200w" alt="" class="image-46"><img src="images/block-t-300x300-min.png" loading="lazy" alt="" class="image-45">
+        </div>
+        <div class="div-block-9">
+          <div class="text-block-5">ex-intern</div><img src="images/59fac8676b7e44f638a7904aa40307f0.png" loading="lazy" sizes="(max-width: 479px) 195.28125px, 390.578125px" srcset="images/59fac8676b7e44f638a7904aa40307f0-p-500.png 500w, images/59fac8676b7e44f638a7904aa40307f0-p-800.png 800w, images/59fac8676b7e44f638a7904aa40307f0.png 1162w" alt="" class="image-44"><img src="images/1.jpeg" loading="lazy" srcset="images/1.jpeg 500w, images/1.jpeg 599w" sizes="(max-width: 479px) 141.765625px, 283.546875px" alt="" class="image-51">
+        </div>
+        <div class="bold-text-3">I am a creative problem solver passionate about innovation and transformation - eager to collaborate and tackle new challenges. <br><br>I possess a unique blend of analytical and creative mindset that results in engaging, efficient and intuitive user experiences. <br><br>Proficient in visual and interaction design with human-centered methodologies, and experienced in managing design teams and external clients.<br></div>
+        <a href="https://www.linkedin.com/in/erincfuller" target="_blank" class="paragraph-2 button w-button">let&#x27;s connect on linkedin</a>
+        <a href="https://drive.google.com/file/d/1hCo2wfhSr__wO-0RRP9kdSWx_WgVwmN-/view?usp=sharing" target="_blank" class="paragraph-2 button resume w-button">stalk my resume</a>
       </div>
     </div>
   </div>
-  <div id="about" class="section-2 w-clearfix"><img src="images/photo-1552664688-cf412ec27db2.jpeg" loading="lazy" sizes="100vw" srcset="images/photo-1552664688-cf412ec27db2-p-500.jpeg 500w, images/photo-1552664688-cf412ec27db2-p-800.jpeg 800w, images/photo-1552664688-cf412ec27db2.jpeg 934w" alt="" class="image-7"><img src="images/photo-1548504778-b14db6c34b04.jpeg" loading="lazy" width="185" sizes="(max-width: 991px) 20vw, 185px" srcset="images/photo-1548504778-b14db6c34b04-p-500.jpeg 500w, images/photo-1548504778-b14db6c34b04-p-800.jpeg 800w, images/photo-1548504778-b14db6c34b04-p-1080.jpeg 1080w, images/photo-1548504778-b14db6c34b04.jpeg 1400w" alt="" class="image-8">
-    <p class="paragraph-2">I am a creative problem solver passionate about innovation and transformation - eager to collaborate and tackle new challenges. <br><br>I possesses a unique blend of analytical and creative mindset that results in engaging, efficient and intuitive user experiences. <br><br>Proficient in visual and interaction design with human-centered methodologies, and experienced in managing design teams and external clients.<br>‍</p>
-    <a href="https://drive.google.com/file/d/1hCo2wfhSr__wO-0RRP9kdSWx_WgVwmN-/view?usp=sharing" target="_blank" class="paragraph-2 button resume w-button">stalk my resume</a>
-    <a href="https://www.linkedin.com/in/erincfuller" target="_blank" class="paragraph-2 button w-button">let&#x27;s connect on linkedin</a>
+  <div class="container-10 w-container">
+    <div class="w-row">
+      <div class="w-clearfix w-col w-col-6">
+        <h4 class="heading-5"><strong class="bold-text-2">Case_01 Find Food</strong></h4>
+        <h1 class="heading-4"><strong class="bold-text-3 case-bold">How might we provide better access to resource information for food insecure persons?</strong></h1>
+        <p class="paragraph-3">B.HCI Capstone x Pittsburgh Food Bank<br>Mobile + Desktop Hi-Fi Prototype | UX Research + Testing<a href="https://www.changceline.com/venmo-case-study"><br></a>
+        </p>
+        <a href="find-food.html" class="button food w-button">Visit Case Study</a>
+      </div>
+      <div class="column-5 w-col w-col-6"><img src="images/Screen-Shot-2020-11-24-at-11.17.26-AM.png" loading="lazy" sizes="(max-width: 767px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-11.17.26-AM.png 1320w" alt="" class="image-48"></div>
+    </div>
   </div>
-  <div class="section-2 w-clearfix">
-    <h4 class="heading-5"><strong class="bold-text-2">Case_01 Find Food</strong></h4>
-    <h1 class="heading-4"><strong class="bold-text-3">How might we provide better access to resource information for food insecure persons?</strong></h1>
-    <p class="paragraph-3">B.HCI Capstone x Pittsburgh Food Bank<br>Mobile + Desktop Hi-Fi Prototype | UX Research + Testing<a href="https://www.changceline.com/venmo-case-study"><br></a>
-    </p>
-    <a href="find-food.html" class="button food w-button">Visit Case Study</a><img src="images/photo-1590779033100-9f60a05a013d.jpeg" loading="lazy" sizes="100vw" srcset="images/photo-1590779033100-9f60a05a013d-p-1080.jpeg 1080w, images/photo-1590779033100-9f60a05a013d.jpeg 1401w" alt="" class="image-11"><img src="images/Facebook-Cover2.jpg" loading="lazy" sizes="100vw" srcset="images/Facebook-Cover2-p-500.jpeg 500w, images/Facebook-Cover2-p-1080.jpeg 1080w, images/Facebook-Cover2.jpg 1314w" alt="" class="image-12">
+  <div class="container-10 w-container">
+    <div class="w-row">
+      <div class="w-col w-col-6"><img src="images/photo-1588611911586-903b61474848.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 2500px) 40vw, 1000px" srcset="images/photo-1588611911586-903b61474848-p-500.jpeg 500w, images/photo-1588611911586-903b61474848-p-800.jpeg 800w, images/photo-1588611911586-903b61474848.jpeg 1000w" alt="" class="image-13"></div>
+      <div class="column-8 w-clearfix w-col w-col-6">
+        <div class="text-block heading-5">case_02 quarpanion</div>
+        <h1 class="heading-4"><strong class="bold-text-3 case-bold">How might we create a digital support system for those living alone during lockdown?</strong></h1>
+        <p class="paragraph-3">Design for Social Innovation | School of Design<br>Research | Conceptual Study | CUI | COVID Experience <a href="https://www.changceline.com/venmo-case-study"><br></a>
+        </p>
+        <a href="quarpanion.html" class="button quar w-button">Visit Case Study</a>
+      </div>
+    </div>
   </div>
-  <div class="section-2 w-clearfix">
-    <div class="text-block heading-5">case_02 quarpanion</div>
-    <h1 class="heading-4 quar">How might we create a digital support system for those living alone during lockdown?</h1>
-    <p class="paragraph-3 quar">Design for Social Innovation | School of Design<br>Research | Conceptual Study | CUI | COVID Experience </p>
-    <a href="quarpanion.html" class="button quar w-button">Visit Case Study</a><img src="images/photo-1588611911586-903b61474848.jpeg" loading="lazy" sizes="100vw" srcset="images/photo-1588611911586-903b61474848-p-500.jpeg 500w, images/photo-1588611911586-903b61474848-p-800.jpeg 800w, images/photo-1588611911586-903b61474848.jpeg 1000w" alt="" class="image-13">
-  </div>
-  <div class="section-2 w-clearfix">
-    <div class="text-block selfie">case_03 public art selfie kiosk</div>
-    <h1 class="heading-4">What value does public art bring to a city and it&#x27;s residents?</h1>
-    <p class="paragraph-3">CMU Human Computer Interaction Institute <br>UX Research Methods | Prototyping </p>
-    <a href="selfie.html" class="button selfie w-button">Visit Case Study</a><img src="images/photo-1555679427-1f6dfcce943b.jpeg" loading="lazy" sizes="100vw" srcset="images/photo-1555679427-1f6dfcce943b-p-500.jpeg 500w, images/photo-1555679427-1f6dfcce943b-p-800.jpeg 800w, images/photo-1555679427-1f6dfcce943b.jpeg 975w" alt="" class="image-12 selfie-pic"><img src="images/photo-1567502401034-b947ee46e249.jpeg" loading="lazy" sizes="100vw" srcset="images/photo-1567502401034-b947ee46e249-p-1080.jpeg 1080w, images/photo-1567502401034-b947ee46e249-p-1600.jpeg 1600w, images/photo-1567502401034-b947ee46e249.jpeg 1649w" alt="" class="image-11 selfiepic">
+  <div class="container-10 w-container">
+    <div class="w-row">
+      <div class="w-clearfix w-col w-col-6">
+        <div class="text-block selfie">case_03 public art selfie kiosk</div>
+        <h1 class="heading-4"><strong class="bold-text-3 case-bold">What value does public art bring to a city and it&#x27;s residents?</strong></h1>
+        <p class="paragraph-3">CMU Human Computer Interaction Institute <br>UX Research Methods | Prototyping <a href="https://www.changceline.com/venmo-case-study"><br></a>
+        </p>
+        <a href="selfie.html" class="button selfie w-button">Visit Case Study</a>
+      </div>
+      <div class="w-col w-col-6"><img src="images/Screen-Shot-2020-11-24-at-11.17.38-AM.png" loading="lazy" sizes="(max-width: 767px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-11.17.38-AM.png 1314w" alt="" class="image-47"></div>
+    </div>
   </div>
   <div class="section-3">
     <h1 class="heading-6">the archive</h1>
