--- a/selfie.html
+++ b/selfie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Nov 19 2020 02:46:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 25 2020 13:14:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fb594bfbf969c15d89e6d86" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -12,17 +12,17 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/portfolio-7760df.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body class="body-2">
+<body class="body-3">
   <div class="navbar-3">
     <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar-3 w-nav">
       <div class="container-7 w-container">
-        <a href="#" class="brand-2 w-nav-brand"><img src="images/Screen-Shot-2020-11-13-at-1.40.49-PM.png" loading="lazy" sizes="(max-width: 479px) 26vw, (max-width: 767px) 27vw, 28vw" srcset="images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-1.40.49-PM.png 1400w" alt="" class="image-17"></a>
+        <a href="#" class="brand-2 w-nav-brand"><img src="images/Screen-Shot-2020-11-13-at-1.40.49-PM.png" loading="lazy" sizes="(max-width: 479px) 22vw, (max-width: 767px) 23vw, 24vw" srcset="images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-1.40.49-PM.png 1400w" alt="" class="image-17"></a>
         <nav role="navigation" class="nav-menu-2 w-clearfix w-nav-menu">
           <a href="index.html" class="nav-link-3 w-nav-link">Home</a>
           <a href="index.html" class="nav-link-3 w-nav-link">About</a>
