--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 25 2020 13:14:56 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 25 2020 13:59:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fadfc3ded1d4d46912e835e" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
   <div class="container-9 w-container">
     <div class="div-block-3">
       <p class="paragraph"> Hi, Hello! Nice to meet you, I&#x27;m</p>
-      <div class="landingspace"></div>
+      <div class="landingspace"><img src="images/Screen-Shot-2020-11-13-at-12.04.04-PM.png" loading="lazy" sizes="(max-width: 479px) 72vw, (max-width: 991px) 100vw, 1210px" srcset="images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-12.04.04-PM.png 1452w" alt="" class="image-3"></div>
       <div class="columns-10 w-row">
         <div class="column-3 w-col w-col-4 w-col-small-4 w-col-tiny-4"><img src="images/356034-200.png" loading="lazy" alt="" class="image-42">
           <div class="iconsub">User Experience</div>
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div><img src="images/Erin048-2.jpeg" loading="lazy" width="870" sizes="(max-width: 991px) 90vw, 870px" srcset="images/Erin048-2-p-500.jpeg 500w, images/Erin048-2-p-800.jpeg 800w, images/Erin048-2-p-1080.jpeg 1080w, images/Erin048-2-p-1600.jpeg 1600w, images/Erin048-2.jpeg 1707w" alt="" class="image">
-  </div><img src="images/Screen-Shot-2020-11-13-at-12.04.04-PM.png" loading="lazy" sizes="(max-width: 479px) 72vw, (max-width: 4033px) 36vw, 1452px" srcset="images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-12.04.04-PM.png 1452w" alt="" class="image-3">
+  </div>
   <div class="w-container">
     <div class="w-row">
       <div class="w-col w-col-6 w-col-stack"><img src="images/Screen-Shot-2020-11-24-at-11.31.51-AM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.31.51-AM.png 916w" alt="" class="image-49"></div>
@@ -54,7 +54,7 @@
           <div class="text-block-5">education </div><img src="images/wordmarksquare-red-600x600.png" loading="lazy" alt="" class="image-45"><img src="images/1200px-HCII_logo.svg.png" loading="lazy" sizes="(max-width: 479px) 91.53125px, 183.0625px" srcset="images/1200px-HCII_logo.svg-p-500.png 500w, images/1200px-HCII_logo.svg-p-800.png 800w, images/1200px-HCII_logo.svg-p-1080.png 1080w, images/1200px-HCII_logo.svg.png 1200w" alt="" class="image-46"><img src="images/block-t-300x300-min.png" loading="lazy" alt="" class="image-45">
         </div>
         <div class="div-block-9">
-          <div class="text-block-5">ex-intern</div><img src="images/59fac8676b7e44f638a7904aa40307f0.png" loading="lazy" sizes="(max-width: 479px) 195.28125px, 390.578125px" srcset="images/59fac8676b7e44f638a7904aa40307f0-p-500.png 500w, images/59fac8676b7e44f638a7904aa40307f0-p-800.png 800w, images/59fac8676b7e44f638a7904aa40307f0.png 1162w" alt="" class="image-44"><img src="images/1.jpeg" loading="lazy" srcset="images/1.jpeg 500w, images/1.jpeg 599w" sizes="(max-width: 479px) 141.765625px, 283.546875px" alt="" class="image-51">
+          <div class="text-block-5">ex-intern</div><img src="images/59fac8676b7e44f638a7904aa40307f0.png" loading="lazy" sizes="(max-width: 479px) 195.28125px, 390.578125px" srcset="images/59fac8676b7e44f638a7904aa40307f0-p-500.png 500w, images/59fac8676b7e44f638a7904aa40307f0-p-800.png 800w, images/59fac8676b7e44f638a7904aa40307f0.png 1162w" alt="" class="image-44"><img src="images/1.jpeg" loading="lazy" sizes="(max-width: 479px) 141.765625px, 283.546875px" srcset="images/1-p-500.jpeg 500w, images/1.jpeg 599w" alt="" class="image-51">
         </div>
         <div class="bold-text-3">I am a creative problem solver passionate about innovation and transformation - eager to collaborate and tackle new challenges. <br><br>I possess a unique blend of analytical and creative mindset that results in engaging, efficient and intuitive user experiences. <br><br>Proficient in visual and interaction design with human-centered methodologies, and experienced in managing design teams and external clients.<br></div>
         <a href="https://www.linkedin.com/in/erincfuller" target="_blank" class="paragraph-2 button w-button">let&#x27;s connect on linkedin</a>
@@ -75,8 +75,8 @@
     </div>
   </div>
   <div class="container-10 w-container">
-    <div class="w-row">
-      <div class="w-col w-col-6"><img src="images/photo-1588611911586-903b61474848.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 2500px) 40vw, 1000px" srcset="images/photo-1588611911586-903b61474848-p-500.jpeg 500w, images/photo-1588611911586-903b61474848-p-800.jpeg 800w, images/photo-1588611911586-903b61474848.jpeg 1000w" alt="" class="image-13"></div>
+    <div class="columns-12 w-row">
+      <div class="w-col w-col-6"><img src="images/photo-1588611911586-903b61474848.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, 44vw" srcset="images/photo-1588611911586-903b61474848-p-500.jpeg 500w, images/photo-1588611911586-903b61474848-p-800.jpeg 800w, images/photo-1588611911586-903b61474848.jpeg 1000w" alt="" class="image-13"></div>
       <div class="column-8 w-clearfix w-col w-col-6">
         <div class="text-block heading-5">case_02 quarpanion</div>
         <h1 class="heading-4"><strong class="bold-text-3 case-bold">How might we create a digital support system for those living alone during lockdown?</strong></h1>
