--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 25 2020 13:59:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 07 2020 15:56:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fadfc3ded1d4d46912e835e" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <div class="container-4 w-container">
       <a href="#" class="brand w-nav-brand"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="#" class="nav-link w-nav-link">About</a>
+        <a href="#about" class="nav-link w-nav-link">About</a>
       </nav>
       <div class="w-nav-button">
         <div class="icon w-icon-nav-menu"></div>
@@ -47,7 +47,7 @@
     </div><img src="images/Erin048-2.jpeg" loading="lazy" width="870" sizes="(max-width: 991px) 90vw, 870px" srcset="images/Erin048-2-p-500.jpeg 500w, images/Erin048-2-p-800.jpeg 800w, images/Erin048-2-p-1080.jpeg 1080w, images/Erin048-2-p-1600.jpeg 1600w, images/Erin048-2.jpeg 1707w" alt="" class="image">
   </div>
   <div class="w-container">
-    <div class="w-row">
+    <div id="about" class="w-row">
       <div class="w-col w-col-6 w-col-stack"><img src="images/Screen-Shot-2020-11-24-at-11.31.51-AM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.31.51-AM.png 916w" alt="" class="image-49"></div>
       <div class="column-4 w-clearfix w-col w-col-6 w-col-stack">
         <div class="div-block-9">
@@ -67,7 +67,7 @@
       <div class="w-clearfix w-col w-col-6">
         <h4 class="heading-5"><strong class="bold-text-2">Case_01 Find Food</strong></h4>
         <h1 class="heading-4"><strong class="bold-text-3 case-bold">How might we provide better access to resource information for food insecure persons?</strong></h1>
-        <p class="paragraph-3">B.HCI Capstone x Pittsburgh Food Bank<br>Mobile + Desktop Hi-Fi Prototype | UX Research + Testing<a href="https://www.changceline.com/venmo-case-study"><br></a>
+        <p class="bold-text-2 bump">Mobile + Desktop Hi-Fi Prototype | UX Research + Testing<a href="https://www.changceline.com/venmo-case-study"><br></a>
         </p>
         <a href="find-food.html" class="button food w-button">Visit Case Study</a>
       </div>
@@ -80,7 +80,7 @@
       <div class="column-8 w-clearfix w-col w-col-6">
         <div class="text-block heading-5">case_02 quarpanion</div>
         <h1 class="heading-4"><strong class="bold-text-3 case-bold">How might we create a digital support system for those living alone during lockdown?</strong></h1>
-        <p class="paragraph-3">Design for Social Innovation | School of Design<br>Research | Conceptual Study | CUI | COVID Experience <a href="https://www.changceline.com/venmo-case-study"><br></a>
+        <p class="heading-5 text-block sss">Research | Conceptual Study | Conversation Design | COVID Experience <a href="https://www.changceline.com/venmo-case-study"><br></a>
         </p>
         <a href="quarpanion.html" class="button quar w-button">Visit Case Study</a>
       </div>
@@ -91,7 +91,7 @@
       <div class="w-clearfix w-col w-col-6">
         <div class="text-block selfie">case_03 public art selfie kiosk</div>
         <h1 class="heading-4"><strong class="bold-text-3 case-bold">What value does public art bring to a city and it&#x27;s residents?</strong></h1>
-        <p class="paragraph-3">CMU Human Computer Interaction Institute <br>UX Research Methods | Prototyping <a href="https://www.changceline.com/venmo-case-study"><br></a>
+        <p class="paragraph-3 art"> UX Research Methods | Prototyping <a href="https://www.changceline.com/venmo-case-study"><br></a>
         </p>
         <a href="selfie.html" class="button selfie w-button">Visit Case Study</a>
       </div>
