--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Dec 07 2020 15:56:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 08 2020 02:49:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fadfc3ded1d4d46912e835e" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,8 @@
   <div class="container-9 w-container">
     <div class="div-block-3">
       <p class="paragraph"> Hi, Hello! Nice to meet you, I&#x27;m</p>
-      <div class="landingspace"><img src="images/Screen-Shot-2020-11-13-at-12.04.04-PM.png" loading="lazy" sizes="(max-width: 479px) 72vw, (max-width: 991px) 100vw, 1210px" srcset="images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-12.04.04-PM.png 1452w" alt="" class="image-3"></div>
+      <div class="landingspace"><img src="images/Screen-Shot-2020-11-13-at-12.04.04-PM.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-12.04.04-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-12.04.04-PM.png 1452w" alt="" class="image-3"></div>
+      <p class="paragraph">Seeking junior roles in:</p>
       <div class="columns-10 w-row">
         <div class="column-3 w-col w-col-4 w-col-small-4 w-col-tiny-4"><img src="images/356034-200.png" loading="lazy" alt="" class="image-42">
           <div class="iconsub">User Experience</div>
@@ -48,13 +49,18 @@
   </div>
   <div class="w-container">
     <div id="about" class="w-row">
-      <div class="w-col w-col-6 w-col-stack"><img src="images/Screen-Shot-2020-11-24-at-11.31.51-AM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.31.51-AM.png 916w" alt="" class="image-49"></div>
+      <div class="w-col w-col-6 w-col-stack"><img src="images/Screen-Shot-2020-11-24-at-11.31.51-AM.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.31.51-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.31.51-AM.png 916w" alt="" class="image-49"></div>
       <div class="column-4 w-clearfix w-col w-col-6 w-col-stack">
         <div class="div-block-9">
-          <div class="text-block-5">education </div><img src="images/wordmarksquare-red-600x600.png" loading="lazy" alt="" class="image-45"><img src="images/1200px-HCII_logo.svg.png" loading="lazy" sizes="(max-width: 479px) 91.53125px, 183.0625px" srcset="images/1200px-HCII_logo.svg-p-500.png 500w, images/1200px-HCII_logo.svg-p-800.png 800w, images/1200px-HCII_logo.svg-p-1080.png 1080w, images/1200px-HCII_logo.svg.png 1200w" alt="" class="image-46"><img src="images/block-t-300x300-min.png" loading="lazy" alt="" class="image-45">
+          <div class="text-block-5">education </div>
+          <a href="https://www.cmu.edu" target="_blank" class="w-inline-block"><img src="images/wordmarksquare-red-600x600.png" loading="lazy" alt="" class="image-45"></a>
+          <a href="http://www.hcii.cmu.edu" target="_blank" class="w-inline-block"><img src="images/1200px-HCII_logo.svg.png" loading="lazy" sizes="100vw" srcset="images/1200px-HCII_logo.svg-p-500.png 500w, images/1200px-HCII_logo.svg-p-800.png 800w, images/1200px-HCII_logo.svg-p-1080.png 1080w, images/1200px-HCII_logo.svg.png 1200w" alt="" class="image-46"></a>
+          <a href="https://www.cmu.edu/swartz-center-for-entrepreneurship/" target="_blank" class="w-inline-block"><img src="images/block-t-300x300-min.png" loading="lazy" alt="" class="image-45"></a>
         </div>
         <div class="div-block-9">
-          <div class="text-block-5">ex-intern</div><img src="images/59fac8676b7e44f638a7904aa40307f0.png" loading="lazy" sizes="(max-width: 479px) 195.28125px, 390.578125px" srcset="images/59fac8676b7e44f638a7904aa40307f0-p-500.png 500w, images/59fac8676b7e44f638a7904aa40307f0-p-800.png 800w, images/59fac8676b7e44f638a7904aa40307f0.png 1162w" alt="" class="image-44"><img src="images/1.jpeg" loading="lazy" sizes="(max-width: 479px) 141.765625px, 283.546875px" srcset="images/1-p-500.jpeg 500w, images/1.jpeg 599w" alt="" class="image-51">
+          <div class="text-block-5">ex intern</div>
+          <a href="https://www.wework.com" target="_blank" class="w-inline-block"><img src="images/59fac8676b7e44f638a7904aa40307f0.png" loading="lazy" sizes="100vw" srcset="images/59fac8676b7e44f638a7904aa40307f0-p-500.png 500w, images/59fac8676b7e44f638a7904aa40307f0-p-800.png 800w, images/59fac8676b7e44f638a7904aa40307f0.png 1162w" alt="" class="image-44"></a>
+          <a href="https://www.gates.com/us/en.html" target="_blank" class="w-inline-block"><img src="images/1.jpeg" loading="lazy" sizes="100vw" srcset="images/1-p-500.jpeg 500w, images/1.jpeg 599w" alt="" class="image-51"></a>
         </div>
         <div class="bold-text-3">I am a creative problem solver passionate about innovation and transformation - eager to collaborate and tackle new challenges. <br><br>I possess a unique blend of analytical and creative mindset that results in engaging, efficient and intuitive user experiences. <br><br>Proficient in visual and interaction design with human-centered methodologies, and experienced in managing design teams and external clients.<br></div>
         <a href="https://www.linkedin.com/in/erincfuller" target="_blank" class="paragraph-2 button w-button">let&#x27;s connect on linkedin</a>
@@ -71,12 +77,12 @@
         </p>
         <a href="find-food.html" class="button food w-button">Visit Case Study</a>
       </div>
-      <div class="column-5 w-col w-col-6"><img src="images/Screen-Shot-2020-11-24-at-11.17.26-AM.png" loading="lazy" sizes="(max-width: 767px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-11.17.26-AM.png 1320w" alt="" class="image-48"></div>
+      <div class="column-5 w-col w-col-6"><img src="images/Screen-Shot-2020-11-24-at-11.17.26-AM.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.17.26-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-11.17.26-AM.png 1320w" alt="" class="image-48"></div>
     </div>
   </div>
   <div class="container-10 w-container">
     <div class="columns-12 w-row">
-      <div class="w-col w-col-6"><img src="images/photo-1588611911586-903b61474848.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, 44vw" srcset="images/photo-1588611911586-903b61474848-p-500.jpeg 500w, images/photo-1588611911586-903b61474848-p-800.jpeg 800w, images/photo-1588611911586-903b61474848.jpeg 1000w" alt="" class="image-13"></div>
+      <div class="w-col w-col-6"><img src="images/photo-1588611911586-903b61474848.jpeg" loading="lazy" sizes="100vw" srcset="images/photo-1588611911586-903b61474848-p-500.jpeg 500w, images/photo-1588611911586-903b61474848-p-800.jpeg 800w, images/photo-1588611911586-903b61474848.jpeg 1000w" alt="" class="image-13"></div>
       <div class="column-8 w-clearfix w-col w-col-6">
         <div class="text-block heading-5">case_02 quarpanion</div>
         <h1 class="heading-4"><strong class="bold-text-3 case-bold">How might we create a digital support system for those living alone during lockdown?</strong></h1>
@@ -95,7 +101,17 @@
         </p>
         <a href="selfie.html" class="button selfie w-button">Visit Case Study</a>
       </div>
-      <div class="w-col w-col-6"><img src="images/Screen-Shot-2020-11-24-at-11.17.38-AM.png" loading="lazy" sizes="(max-width: 767px) 100vw, 44vw" srcset="images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-11.17.38-AM.png 1314w" alt="" class="image-47"></div>
+      <div class="w-col w-col-6"><img src="images/Screen-Shot-2020-11-24-at-11.17.38-AM.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-11.17.38-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-11.17.38-AM.png 1314w" alt="" class="image-47"></div>
+    </div>
+  </div>
+  <div class="container-10 w-container"><img src="images/TESTIMONIAL.png" loading="lazy" sizes="90vw" srcset="images/TESTIMONIAL.png 500w, images/TESTIMONIAL.png 800w, images/TESTIMONIAL.png 1080w, images/TESTIMONIAL.png 1200w" alt="" class="image-54"></div>
+  <div class="container-10 w-container">
+    <div class="w-row">
+      <div class="w-col w-col-6">
+        <div class="text-block selfie about">you want more about me? </div>
+        <div class="bold-text-3">Normally you can catch me at fun group exercise classes, but working out from home, Peloton digital subscription has my heart. My friends call me the &quot;health queen&quot; because beyond fitness, I&#x27;m always on the hunt for healthy and tasty cuisine to try out or make.<br><br>The mediums of creative outlets for me range from doodling and watercolor painting to embroidery. I suppose it depends on the nature of inner struggle I&#x27;m trying to solve. <br><br>I&#x27;m also an avid listener of non-fiction podcasts and audiobooks - absorbing information about startup IPOs and political data, to current social justice work to the the psychology of cults. Middle school me would be shocked that I&#x27;m saying &quot;I just love learning&quot;.<br>‍<br></div>
+      </div>
+      <div class="w-col w-col-6"><img src="images/personal.jpg" loading="lazy" sizes="100vw" srcset="images/personal.jpg 500w, images/personal.jpg 800w, images/personal.jpg 900w" alt=""></div>
     </div>
   </div>
   <div class="section-3">
