--- a/quarpanion.html
+++ b/quarpanion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Dec 07 2020 15:56:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 08 2020 02:49:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fb453062cdfab0fa3caeae6" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -21,11 +21,8 @@
 <body class="quarbod">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar-4 w-nav">
     <div class="container-8 w-container">
-      <a href="#" class="brand-4 w-nav-brand"><img src="images/Screen-Shot-2020-11-18-at-9.22.00-PM.png" loading="lazy" sizes="(max-width: 767px) 28vw, (max-width: 991px) 218.390625px, 282px" srcset="images/Screen-Shot-2020-11-18-at-9.22.00-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-9.22.00-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-9.22.00-PM.png 944w" alt=""></a>
-      <nav role="navigation" class="w-nav-menu">
-        <a href="index.html" class="nav-link-4 w-nav-link">Home</a>
-        <a href="index.html" class="nav-link-4 w-nav-link">About</a>
-      </nav>
+      <a href="index.html" class="brand-4 w-nav-brand"><img src="images/Screen-Shot-2020-11-18-at-9.22.00-PM.png" loading="lazy" sizes="(max-width: 767px) 28vw, (max-width: 991px) 218.390625px, 282px" srcset="images/Screen-Shot-2020-11-18-at-9.22.00-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-9.22.00-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-9.22.00-PM.png 944w" alt=""></a>
+      <nav role="navigation" class="w-nav-menu"></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -40,12 +37,30 @@
     <div class="text-block-4 quarmiddle"><strong>COVID-19 is not the rapid apocalypse Hollywood loves, but it is a monumental cultural period that is changing the way we live. The level of restriction put on individuals ranges in severity and duration under different national and local governments, but what remains the same for all is this is hard.</strong> <br><br>‍<strong>I began research by looking into peopleʼs emotional state and asking how theyʼre dealing with quarantine as individuals - exploring routine and habits lost or gained during this time.</strong> </div>
     <div class="space quar"></div>
     <div><img src="images/Screen-Shot-2020-11-18-at-12.20.34-PM.png" loading="lazy" sizes="(max-width: 479px) 100vw, 500.796875px" srcset="images/Screen-Shot-2020-11-18-at-12.20.34-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-12.20.34-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-12.20.34-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-12.20.34-PM.png 1252w" alt="" class="quarsec"></div>
-    <div class="text-block-4"><strong>Surveys done through Instagram story polls as a way to reach people where they already were. <br>‍</strong></div><img src="images/Screen-Shot-2020-11-24-at-8.38.08-PM.png" loading="lazy" srcset="images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-24-at-8.38.08-PM.png 1946w" sizes="56vw" alt="" class="image-52">
-    <div class="text-block-4"><strong>Followed up with ... <br>‍</strong></div>
-    <div class="quardiv"><img src="images/Screen-Shot-2020-11-18-at-2.19.20-PM.png" loading="lazy" sizes="(max-width: 3382px) 56vw, 1894px" srcset="images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-2.19.20-PM.png 1894w" alt="" class="image-29"><img src="images/Screen-Shot-2020-11-18-at-2.22.28-PM.png" loading="lazy" sizes="(max-width: 3346px) 56vw, 1874px" srcset="images/Screen-Shot-2020-11-18-at-2.22.28-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-2.22.28-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-2.22.28-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-2.22.28-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-2.22.28-PM.png 1874w" alt="" class="image-29"><img src="images/Screen-Shot-2020-11-18-at-2.19.39-PM.png" loading="lazy" sizes="(max-width: 4282px) 56vw, 2398px" srcset="images/Screen-Shot-2020-11-18-at-2.19.39-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-2.19.39-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-2.19.39-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-2.19.39-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-2.19.39-PM-p-2000.png 2000w, images/Screen-Shot-2020-11-18-at-2.19.39-PM.png 2398w" alt="" class="image-29"><img src="images/Screen-Shot-2020-11-18-at-2.19.49-PM.png" loading="lazy" sizes="(max-width: 3424px) 56vw, 1918px" srcset="images/Screen-Shot-2020-11-18-at-2.19.49-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-2.19.49-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-2.19.49-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-2.19.49-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-2.19.49-PM.png 1918w" alt="" class="image-29"></div>
-    <div class="text-block-4">As well as four long form interviews with peers: </div>
-    <div class="text-block-6">1. Early professional in the entertainment industry, graduated CMU 2 years ago, male <br>2. Freshman drama student at CMU, female<br>3. Junior International Relations and Politics Student, currently “abroad” in Washington D.C. <br>4. Group interview with three college age sisters and single mother, the freshman and junior are student athletes at St. Mary&#x27;s College and the senior is in Dietrich at CMU </div>
-    <div class="quardiv"><img src="images/Screen-Shot-2020-11-18-at-2.29.50-PM.png" loading="lazy" sizes="(max-width: 2846px) 56vw, 1594px" srcset="images/Screen-Shot-2020-11-18-at-2.29.50-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-2.29.50-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-2.29.50-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-2.29.50-PM.png 1594w" alt=""></div>
+    <div class="text-block-4 w-richtext">
+      <h4><strong>Surveys and research was done through Instagram story poll functions as a way to reach people where they already where ... social media.</strong> </h4>
+    </div>
+    <div class="quardiv"><img src="images/Screen-Shot-2020-11-24-at-8.38.08-PM.png" loading="lazy" sizes="(max-width: 3474px) 56vw, 1946px" srcset="images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-500.png 500w, images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-800.png 800w, images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-24-at-8.38.08-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-24-at-8.38.08-PM.png 1946w" alt="" class="image-33"></div>
+    <div class="text-block-4 w-richtext">
+      <h4><strong>... followed up with ...</strong></h4>
+    </div>
+    <div class="quardiv"><img src="images/Screen-Shot-2020-11-18-at-2.19.20-PM.png" loading="lazy" sizes="(max-width: 3382px) 56vw, 1894px" srcset="images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-2.19.20-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-2.19.20-PM.png 1894w" alt="" class="image-33"></div>
+    <div class="text-block-4 w-richtext">
+      <h4><strong>Most, 66%, said they were getting the support they needed, but 34% said they were not getting the support they needed. Not to mention those who felt they were not getting proper support would be less likely to respond to non-anonymous polls.</strong></h4>
+    </div>
+    <div class="quardiv"><img src="images/Screen-Shot-2020-12-07-at-9.38.19-PM.png" loading="lazy" sizes="(max-width: 3832px) 56vw, 2146px" srcset="images/Screen-Shot-2020-12-07-at-9.38.19-PM.png 500w, images/Screen-Shot-2020-12-07-at-9.38.19-PM.png 800w, images/Screen-Shot-2020-12-07-at-9.38.19-PM.png 1080w, images/Screen-Shot-2020-12-07-at-9.38.19-PM.png 1600w, images/Screen-Shot-2020-12-07-at-9.38.19-PM.png 2000w, images/Screen-Shot-2020-12-07-at-9.38.19-PM.png 2146w" alt="" class="image-33"></div>
+    <div class="text-block-4 w-richtext">
+      <h4><strong>Most responders, 71%, said they gained a new hobby or habit during quarantine.</strong></h4>
+      <h4>However, 65% of people also said they lost a hobby or habit during quarantine.</h4>
+      <p>‍</p>
+      <h4>I performed four long form interviews with peers: </h4>
+      <h5>1. Early professional in the entertainment industry, graduated CMU 2 years ago, male <br>2. Freshman drama student at CMU, female<br>3. Junior International Relations and Politics Student, currently “abroad” in Washington D.C. <br>4. Group interview with three college age sisters and single mother, the freshman and junior are student athletes at St. Mary&#x27;s College and the senior is in Dietrich at CMU </h5>
+      <p>‍</p>
+      <p>Overall ... healthy or not, here&#x27;s how people have been coping :</p>
+    </div>
+    <div class="quardiv"><img src="images/Screen-Shot-2020-12-07-at-9.43.24-PM.png" loading="lazy" sizes="(max-width: 4957px) 56vw, 2776px" srcset="images/Screen-Shot-2020-12-07-at-9.43.24-PM.png 500w, images/Screen-Shot-2020-12-07-at-9.43.24-PM.png 800w, images/Screen-Shot-2020-12-07-at-9.43.24-PM.png 1080w, images/Screen-Shot-2020-12-07-at-9.43.24-PM.png 1600w, images/Screen-Shot-2020-12-07-at-9.43.24-PM.png 2000w, images/Screen-Shot-2020-12-07-at-9.43.24-PM.png 2600w, images/Screen-Shot-2020-12-07-at-9.43.24-PM.png 2776w" alt="" class="image-33"></div>
+    <div class="quardiv"></div>
+    <div class="quardiv"></div>
     <div class="space quar"></div>
     <div><img src="images/Screen-Shot-2020-11-18-at-12.21.20-PM.png" loading="lazy" sizes="(max-width: 479px) 100vw, 697.609375px" srcset="images/Screen-Shot-2020-11-18-at-12.21.20-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-12.21.20-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-12.21.20-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-12.21.20-PM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-12.21.20-PM.png 1754w" alt="" class="quarsec"></div>
     <h2 class="quote"> <strong class="quote">How might we reframe how we see productivity during this time and what can we create to best foster motivation and productivity in a healthy way for individuals?</strong> </h2>
@@ -53,38 +68,37 @@
   </div>
   <div class="bolddiv"><img src="images/Screen-Shot-2020-11-18-at-11.34.12-AM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1836.0625px" srcset="images/Screen-Shot-2020-11-18-at-11.34.12-AM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-11.34.12-AM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-11.34.12-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-11.34.12-AM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-11.34.12-AM.png 1680w" alt="" class="image-30"></div>
   <div class="section-7">
+    <div><img src="images/Screen-Shot-2020-11-18-at-12.22.27-PM.png" loading="lazy" sizes="(max-width: 479px) 100vw, 479.40625px" srcset="images/Screen-Shot-2020-11-18-at-12.22.27-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-12.22.27-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-12.22.27-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-12.22.27-PM.png 1178w" alt="" class="quarsec"></div>
     <div class="text-block-4 w-richtext">
-      <h2>Target Demographic</h2>
-      <h4><strong>My instagram demographics are largely 18 - 24 year olds (72% of followers) and slight majority (60%) female.</strong></h4>
-      <h4><strong>~18 to ~28+ : College age to early stage young professionals</strong></h4>
-      <h6><strong>     In between new found independence and stability found in later life milestones (marriage, etc.)</strong></h6>
-      <h4><strong>Living solo or with peers in same stage of life</strong></h4>
-      <h6><strong>     More and more americans are living alone </strong></h6>
-      <h4><strong>Currently working or out of work individuals </strong></h4>
-      <p>‍</p>
+      <h2><strong>A conversational user interface agent that acts as </strong>a verbal journal and support system for those living alone during COVID-19. </h2>
+      <h4>There are three main functions of the CUI:</h4>
+      <h4><strong>1. A Morning Check In to set the dayʼs intention and priorities.</strong></h4>
+      <h4><strong>2. An Evening Check In to serve as an </strong><strong>evening reflection and adaptations</strong> </h4>
+      <h4><strong>3. “Random” Check Ins acting as in the moment updating and reflections</strong> </h4>
     </div>
+    <div class="space quar"></div>
+    <div class="space quar"></div>
   </div>
   <div class="bolddiv"><img src="images/Frame-6.png" loading="lazy" sizes="(max-width: 991px) 100vw, 2018.40625px" srcset="images/Frame-6-p-800.png 800w, images/Frame-6-p-1080.png 1080w, images/Frame-6.png 1534w" alt="" class="image-31"></div>
   <div class="section-7">
-    <div><img src="images/Screen-Shot-2020-11-18-at-12.22.27-PM.png" loading="lazy" sizes="(max-width: 479px) 100vw, 479.40625px" srcset="images/Screen-Shot-2020-11-18-at-12.22.27-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-12.22.27-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-12.22.27-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-12.22.27-PM.png 1178w" alt="" class="quarsec"></div>
-    <div class="text-block-4 w-richtext">
-      <h2><strong>Morning Check In</strong> </h2>
-      <h4><strong>Setting the dayʼs intention and priorities.</strong></h4>
-      <h2><strong>Evening Check In</strong> </h2>
-      <h4><strong>Evening reflection and adaptations</strong> </h4>
-      <h2><strong>“Random” Check Ins</strong> </h2>
-      <h4><strong>In moment updating and reflections</strong> </h4>
-    </div>
     <div class="quardiv"><img src="images/Screen-Shot-2020-11-18-at-11.49.33-AM.png" loading="lazy" sizes="(max-width: 2942px) 56vw, 1648px" srcset="images/Screen-Shot-2020-11-18-at-11.49.33-AM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-11.49.33-AM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-11.49.33-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-11.49.33-AM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-11.49.33-AM.png 1648w" alt="" class="image-33"><img src="images/Screen-Shot-2020-11-18-at-11.49.43-AM.png" loading="lazy" sizes="(max-width: 2932px) 56vw, 1642px" srcset="images/Screen-Shot-2020-11-18-at-11.49.43-AM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-11.49.43-AM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-11.49.43-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-11.49.43-AM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-11.49.43-AM.png 1642w" alt="" class="image-33"><img src="images/Screen-Shot-2020-11-18-at-11.49.53-AM.png" loading="lazy" sizes="(max-width: 2996px) 56vw, 1678px" srcset="images/Screen-Shot-2020-11-18-at-11.49.53-AM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-11.49.53-AM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-11.49.53-AM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-11.49.53-AM-p-1600.png 1600w, images/Screen-Shot-2020-11-18-at-11.49.53-AM.png 1678w" alt="" class="image-33"></div>
     <div class="text-block-4 w-richtext">
-      <h2><strong>activity variety </strong> </h2>
-      <h4><strong>mediation</strong></h4>
-      <h4><strong>breathing exercises</strong></h4>
-      <h4><strong>guided or unguided journaling</strong></h4>
+      <h2><strong>Unless the user says they are busy, the CUI will prompt activities to foster mindfulness: </strong> </h2>
+      <h4><strong>+ meditation</strong></h4>
+      <h4><strong>+ breathing exercises</strong></h4>
+      <h4><strong>+ guided or unguided journaling</strong></h4>
       <h6><strong>       </strong><strong>guided examples: gratitude practice, planning - day, year, next milestone, day summary</strong></h6>
-      <h4><strong>setting a daily intention or mantra</strong></h4>
-      <h4><strong>‍</strong><strong>quote reflection</strong></h4>
-      <h4><strong>fear setting, thought challenging, negative visualization, etc.</strong> </h4>
+      <h4><strong>+ setting a daily intention or mantra</strong></h4>
+      <h4><strong>+ </strong><strong>quote reflection</strong></h4>
+      <h4><strong>+ fear setting, thought challenging, negative visualization, etc.</strong> </h4>
+    </div>
+    <div class="text-block-4 w-richtext">
+      <h2>Target User Demographic:</h2>
+      <h4><strong>+ College age to early stage young professionals</strong></h4>
+      <h6><strong>     In between new found independence and stability found in later life milestones (marriage, etc.)</strong></h6>
+      <h4><strong>+ People who are living solo are the main or with peers in same stage of life </strong></h4>
+      <h4><strong>+ Those currently working remotely or out of work individuals </strong></h4>
+      <p>‍</p>
     </div>
     <div><img src="images/Screen-Shot-2020-11-18-at-2.52.25-PM.png" loading="lazy" sizes="462.0625px" srcset="images/Screen-Shot-2020-11-18-at-2.52.25-PM-p-500.png 500w, images/Screen-Shot-2020-11-18-at-2.52.25-PM-p-800.png 800w, images/Screen-Shot-2020-11-18-at-2.52.25-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-18-at-2.52.25-PM.png 1274w" alt="" class="quarsec"></div>
   </div>
