--- a/selfie.html
+++ b/selfie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Dec 07 2020 15:56:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 08 2020 02:49:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fb594bfbf969c15d89e6d86" data-wf-site="5fadfc3ded1d4d37d52e835d">
 <head>
   <meta charset="utf-8">
@@ -22,11 +22,8 @@
   <div class="navbar-3">
     <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar-3 w-nav">
       <div class="container-7 w-container">
-        <a href="#" class="brand-2 w-nav-brand"><img src="images/Screen-Shot-2020-11-13-at-1.40.49-PM.png" loading="lazy" sizes="(max-width: 479px) 22vw, (max-width: 767px) 23vw, 24vw" srcset="images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-1.40.49-PM.png 1400w" alt="" class="image-17"></a>
-        <nav role="navigation" class="nav-menu-2 w-clearfix w-nav-menu">
-          <a href="index.html" class="nav-link-3 w-nav-link">Home</a>
-          <a href="index.html" class="nav-link-3 w-nav-link">About</a>
-        </nav>
+        <a href="index.html" class="brand-2 w-nav-brand"><img src="images/Screen-Shot-2020-11-13-at-1.40.49-PM.png" loading="lazy" sizes="(max-width: 479px) 22vw, (max-width: 767px) 23vw, 24vw" srcset="images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-500.png 500w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-800.png 800w, images/Screen-Shot-2020-11-13-at-1.40.49-PM-p-1080.png 1080w, images/Screen-Shot-2020-11-13-at-1.40.49-PM.png 1400w" alt="" class="image-17"></a>
+        <nav role="navigation" class="nav-menu-2 w-nav-menu"></nav>
         <div class="menu-button w-nav-button">
           <div class="w-icon-nav-menu"></div>
         </div>
